--- a/www/components/cheque/forms/step_3.html
+++ b/www/components/cheque/forms/step_3.html
@@ -13,7 +13,7 @@
         </div>
         <div class="row doc_mainimg">
             <!--            <img ng-src="{{selectedImage.src}} ">-->
-            <img ng-src="{{imgURI}}" style="text-align: center">
+            <img ng-src="{{chequeImgURI}}" style="text-align: center">
             <div class="btnnext_main cap_img">
                 <div class="row pd0">
                     <div class="col col-50 pd0 pdr5px">
@@ -26,9 +26,9 @@
             </div>
             <nav class="glass nav_icons">
                 <div class="glass">
-                    <button ng-click="showImagesInModel()"><span style="font-size: 25px " class="ion-arrow-expand "></span></button>
-                    <button ng-click="deleteImage() "><span style="font-size: 25px " class="ion-trash-b "></span></button>
-                    <button><span style="font-size: 25px; " class="ion-refresh "></span></button>
+                    <button ng-click="showImagesInModel()"><span class="ion-arrow-expand f25"></span></button>
+                    <button ng-click="deleteImage() "><span class="ion-trash-b f25"></span></button>
+                    <button><span class="ion-refresh f25"></span></button>
                 </div>
             </nav>
         </div>
