--- a/www/components/cheque/forms/step_4.html
+++ b/www/components/cheque/forms/step_4.html
@@ -3,9 +3,9 @@
         <div class="input_field_list cheque_item_detail">
             <h2 class="title">Cheque Detail</h2>
             <div class="cheque_img">
-                <img src="img/cheque.jpg" alt="cheque">
+                <img src="{{chequeImgURI}}" alt="cheque">
             </div>
-            <form name="cheque_detail" novalidate class="form_inner">
+            <form name="cheque_detail" novalidate class="form_inner cheque_detail_form">
                 <ion-list>
                     <!--  Shortage  -->
                     <ion-item class="item item-input item-stacked-label icon_field">
