--- a/www/components/main/main.html
+++ b/www/components/main/main.html
@@ -7,7 +7,7 @@
             </ion-nav-back-button>
 
             <ion-nav-title>
-                <h1 class="title">{{'ARUN_LOGISTICS_INVOICING_APP' | translate }}</h1>
+                <h1 class="title">Arun Logistics Invoicing App</h1>
             </ion-nav-title>
             <ion-nav-buttons side="right">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="right">
