--- a/www/components/invoice/forms/step_3.html
+++ b/www/components/invoice/forms/step_3.html
@@ -14,9 +14,9 @@
             <img ng-src="{{selectedImage.src}} ">
             <nav class="glass nav_icons">
                 <div class="glass">
-                    <button ng-click="showImagesInModel()"><span style="font-size: 25px " class="ion-arrow-expand "></span></button>
-                    <button ng-click="deleteImage() "><span style="font-size: 25px " class="ion-trash-b "></span></button>
-                    <button><span style="font-size: 25px; " class="ion-refresh "></span></button>
+                    <button ng-click="showImagesInModel()"><span class="ion-arrow-expand f25"></span></button>
+                    <button ng-click="deleteImage() "><span class="ion-trash-b f25"></span></button>
+                    <button><span class="ion-refresh f25"></span></button>
                 </div>
             </nav>
         </div>
