--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1365,7 +1365,7 @@ button[disabled="disabled"] {
     .cap_img {
         position: absolute;
         top: 0;
-        margin-top: 20px !important;
+        margin-top: 0px !important;
     }
     .cap_img button {
         width: 100% !important;
@@ -1487,6 +1487,15 @@ button[disabled="disabled"] {
     }
     .backdrop.visible.active {
         position: relative;
+    }
+    .f25 {
+        font-size: 25px !important;
+    }
+    .cheque_detail_form ion-item {
+        padding: 10px !important;
+    }
+    .cheque_edit_dtl ion-item {
+        padding-left: 0 !important;
     }
     /*============ media queries =========== */
 
