--- a/www/components/cheque/forms/payslip_step1.html
+++ b/www/components/cheque/forms/payslip_step1.html
@@ -2,78 +2,79 @@
     <ion-view>
         <ion-content class="pay_slip">
             <div class="body_content">
-                <ion-list>
+                <form name="documentform">
+                    <ion-list>
 
-                    <!-- selected item block start here -->
-                    <ion-item class="item item-input item-stacked-label icon_field">
-                        <h2>Seleted</h2>
-                        <span class="payslip_items" ng-repeat="cheque in chequeList.selected">
-                            <ion-checkbox ng-model="cheque.selected" ng-change="unselectCheque($index)">
-                                <label>
-                                    <span class="date ">Date:12-05-2016</span>
-                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
-                        </label>
-                        <p>{{cheque.customerAccount}}</p>
-                        </ion-checkbox>
-                        </span>
-                    </ion-item>
-                    <!-- selected item block end here -->
+                        <!-- selected item block start here -->
+                        <ion-item class="item item-input item-stacked-label icon_field">
+                            <h2>Seleted</h2>
+                            <div class="payslip_items" ng-repeat="cheque in chequeList.selected">
+                                <div ng-model="cheque.selected" on-tap="unselectCheque($index)" class="payslip_item_detail">
+                                    <label>
+                                        <span class="date ">Date:12-05-2016</span>
+                                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
+                                    </label>
+                                    <p>{{cheque.customerAccount}}</p>
+                                </div>
+                            </div>
+                        </ion-item>
+                        <!-- selected item block end here -->
 
-                    <!-- same company block start here -->
-                    <ion-item class="item item-input item-stacked-label icon_field">
-                        <h2>Same Company</h2>
-                        <span class="payslip_items" ng-repeat="sameCheque in chequeList.selectable">
-                            <ion-checkbox ng-model="cheque.selected" ng-change="selectCheque($index)">
-                                <label>
-                                    <span class="date ">Date:12-05-2016</span>
-                        <span class="cheque_no ">Cheque No :{{sameCheque.chequeNumber}}</span>
-                        </label>
-                        <p>{{sameCheque.customerAccount}}</p>
-                        </ion-checkbox>
-                        </span>
-                    </ion-item>
-                    <!-- same Company block end here -->
+                        <!-- same company block start here -->
+                        <ion-item class="item item-input item-stacked-label icon_field">
+                            <h2>Same Company</h2>
+                            <div class="payslip_items" ng-repeat="sameCheque in chequeList.selectable">
+                                <div ng-model="cheque.selected" on-tap="selectCheque($index)" class="payslip_item_detail">
+                                    <label>
+                                        <span class="date ">Date:12-05-2016</span>
+                                        <span class="cheque_no ">Cheque No :{{sameCheque.chequeNumber}}</span>
+                                    </label>
+                                    <p>{{sameCheque.customerAccount}}</p>
+                                </div>
+                            </div>
+                        </ion-item>
+                        <!-- same Company block end here -->
 
-                    <!-- others block start here -->
-                    <ion-item class="item item-input item-stacked-label icon_field">
-                        <h2>Others</h2>
-                        <span class="payslip_items" ng-repeat="cheque in chequeList.others">
-                            <ion-checkbox ng-model="cheque.selected" ng-disabled="true">
-                                <label>
-                                    <span class="date ">Date:12-05-2016</span>
-                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
-                        </label>
-                        <p>{{cheque.customerAccount}}</p>
-                        </ion-checkbox>
-                        </span>
-                    </ion-item>
-                    <!-- others block end here -->
+                        <!-- others block start here -->
+                        <ion-item class="item item-input item-stacked-label icon_field">
+                            <h2>Others</h2>
+                            <div class="payslip_items" ng-repeat="cheque in chequeList.others">
+                                <div ng-model="cheque.selected" ng-disabled="true" class="payslip_item_detail">
+                                    <label>
+                                        <span class="date ">Date:12-05-2016</span>
+                                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
+                                    </label>
+                                    <p>{{cheque.customerAccount}}</p>
+                                </div>
+                            </div>
+                        </ion-item>
+                        <!-- others block end here -->
 
-                    <!-- posted cheque  start here -->
-                    <ion-item class="item item-input item-stacked-label icon_field">
-                        <h2>Posted Cheque</h2>
-                        <span class="payslip_items" ng-repeat="cheque in chequeList.postDated">
-                            <ion-checkbox ng-model="cheque.selected" ng-disabled="true">
-                                <label>
-                                    <span class="date ">Date:12-05-2016</span>
-                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
-                        </label>
-                        <p>{{cheque.customerAccount}}</p>
-                        </ion-checkbox>
-                        </span>
-                    </ion-item>
-                    <!-- posted cheque end here -->
-                </ion-list>
-                <div class="btnnext_main ">
-                    <div class="row ">
-                        <button class="btn-next " ui-sref="root.cheque.payslipStep2 ">Next</button>
+                        <!-- posted cheque  start here -->
+                        <ion-item class="item item-input item-stacked-label icon_field">
+                            <h2>Posted Cheque</h2>
+                            <div class="payslip_items" ng-repeat="cheque in chequeList.postDated">
+                                <div ng-model="cheque.selected" ng-disabled="true" class="payslip_item_detail">
+                                    <label>
+                                        <span class="date ">Date:12-05-2016</span>
+                                        <span class="cheque_no ">Cheque No :{{cheque.chequeNumber}}</span>
+                                    </label>
+                                    <p>{{cheque.customerAccount}}</p>
+                                </div>
+                            </div>
+                        </ion-item>
+                        <!-- posted cheque end here -->
+
+
+
+                    </ion-list>
+                    <div class="btnnext_main ">
+                        <div class="row ">
+                            <button class="btn-next " ui-sref="root.cheque.payslipStep2 ">Next</button>
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
-
         </ion-content>
-
-
-
     </ion-view>
 </div>
