--- a/www/components/invoice/forms/step_3.html
+++ b/www/components/invoice/forms/step_3.html
@@ -5,7 +5,7 @@
         <div class="doc_thumb_img" ng-repeat="doc in docs">
           <div class="doc_text_block">
             <div class="doc_main_img">
-              <img class="image-list-thumb doc-thumb-border-mask clip-circle" ng-src="{{doc.src}} " ng-click="showImage($index) " />
+              <img class="sucess_check image-list-thumb doc-thumb-border-mask clip-circle" ng-src="{{doc.src}} " ng-click="showImage($index) " />
             </div>
             <p>{{ doc.label }}</p>
           </div>
