--- a/www/components/invoice/forms/step_1-1.html
+++ b/www/components/invoice/forms/step_1-1.html
@@ -1,31 +1,32 @@
 <div class="invoice_main">
-    <!--
+  <!--
 <div class="bar bar-subheader">
     <h2 class="title">{{'INVOICE' | translate }}</h2>
 </div>
 -->
-    <div class="body_content">
-        <div class="list">
-            <div class="input_group select_group">
-                <label class="item item-input item-select">
+  <div class="body_content">
+    <div class="list">
+      <div class="input_group select_group">
+        <label class="item item-input item-select">
                     <div class="input-label">
                         {{'TYPE'| translate }}
                     </div>
                     <select ng-model="user_input.type">
                         <option selected>Consignment Note</option>
-                        <option>{{'SALES_INVOICE' | translate }}</option>
+                        <option>Indent Invoice</option>
+                        <option>Sales Invoice</option>
                     </select>
                 </label>
-            </div>
-            <div class="input_group" ng-init="user_input.id='SCN-06108'">
-                <label class=" item item-input item-stacked-label "> </label>
-                <input type="text " placeholder="{{ 'DOCUMENT_NUMBER' | translate}} " ng-model="user_input.id ">
-            </div>
-        </div>
+      </div>
+      <div class="input_group" ng-init="user_input.id='SCN-16-06108'">
+        <label class=" item item-input item-stacked-label "> </label>
+        <input type="text " placeholder="{{ 'DOCUMENT_NUMBER' | translate}} " ng-model="user_input.id ">
+      </div>
     </div>
-    <ion-footer-bar class="pd20 ">
-        <div class="btnnext_main ">
-            <button class="btn-next " ng-click="getMetedata(user_input) ">{{'PULL_INVOICE_DETAILS' | translate }}</button>
-        </div>
-    </ion-footer-bar>
+  </div>
+  <ion-footer-bar class="pd20 ">
+    <div class="btnnext_main ">
+      <button class="btn-next " ng-click="getMetedata(user_input) ">{{'PULL_INVOICE_DETAILS' | translate }}</button>
+    </div>
+  </ion-footer-bar>
 </div>
